public/style.css
html,
* {
    box-sizing: border-box;
    transition: all 0.16s;
}

body {
    font-size: 20px;
    margin-bottom: 20px;
    margin-top: 20px;
}

#main {
    box-sizing: content-box;
    display: flex;
    justify-content: space-between;
    margin: 0 auto;
    max-width: 1112px;
    padding: 0 2rem;
}

img {
    display: block;
    margin-bottom: 3.6rem;
    max-width: calc(50% - 1.8rem);
}

.default-frames img {
    background: #C4C4C4;
}

button {
    background: #333;
    border-radius: 4px;
    border: 0;
    color: #FFF;
    display: block;
    font-size: 1rem;
    margin: 0 auto 1.6rem;
    outline: 0;
    padding: 0.5rem 1rem;
}

button:hover {
    background: #555;
    cursor: pointer;
}

#inp {
    display: none;
}

.input {
    box-sizing: content-box;
    left: 0;
    max-height: 400px;
    padding-right: 1rem;
    position: sticky;
    text-align: center;
    top: 2rem;
    width: 33.33%;
}

.input button {
    margin: 0;
    width: calc(100% - 1.8rem);
}

@media all and (min-width: 1182px) {
    .input button {
        margin: 0 auto 0 25%;
        width: auto;
    }
}

#uploaded-frame {
    background: #C4C4C4;
    display: block;
    height: 0;
    margin-bottom: 1.125rem;
    padding-top: calc(100% - 1.8rem);
    width: calc(100% - 1.8rem);
    position: relative;
    overflow: hidden;
}

#uploaded-frame img {
    min-width: 100%;
    height: auto;
    position: absolute;
    top: 0;
    bottom: 0;
    right: 0;
    left: 0;
    width: 100%;
    display: block;
}

#frames {
    align-items: flex-start;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-between;
    padding-top: 0.75rem;
    position: relative;
    width: 66.66%;
}

@media all and (max-width:1200px) {
    #frames {
        left: 0rem;
    }
}

@media all and (max-width: 760px) {
    #main {
        flex-direction: column;
        padding: 0 2rem;
    }
    .input {
        margin-bottom: 2rem;
        max-height: inherit;
        position: static;
        width: 100%;
    }
    #frames {
        width: 100%;
    }
    img {
        margin: 0 auto 3.6rem;
        max-width: 100%;
        width: 100%;
    }
}

